# zhegutian_eval

./: .env.example  .gitignore  README.md  _config.yml  batch_evaluate.py  batch_generate.py  index.md  pyproject.toml  run_eval.py
data/: eval_zhegutian.jsonl  zhonghua_xinyun.json
docs/architecture/: PROJECT_MAP.md  architecture.md
docs/evolution/: F层的设计演化.md  README.md  从Pipeline到系统.md  从指标评测到失稳场观测.md  任务信息结构化设计.md  优化视角下的设计迭代.md  缺失值与覆盖.md  裁判成为系统的一部分.md
docs/philosophy/: concepts.md  future.md  philosophy.md  关于创作的思考.md
rules/: zhegutian_zhengti.json
src/: evaluator.py  generator.py  llm_client.py  main.py  utils.py
src/metrics/: antithesis.py  pingze.py  rhyme.py  semantic.py
src/schema/: rule_config.py
tools/: delta_snapshot.py
utils/: extractor.py  text_cleaner.py  text_utils.py
